--- a/main/html/content-areas/styles.css
+++ b/main/html/content-areas/styles.css
@@ -15,6 +15,7 @@
     --side-bar-color: #1B4965;
     --sub-menu-hover: rgba(50,120,160, 0.7);
     --sub-menu-background: rgba(37,97,133, 0.7);
+    --hover-color: #449ad8;
 }
 body.darkmode{
     --header-bg-color: #031825;
@@ -32,6 +33,7 @@ body.darkmode{
     --side-bar-color: #002139;
     --sub-menu-hover: rgba(11, 46, 86, 0.7);
     --sub-menu-background: rgba(9, 39, 69, 0.7);
+    --hover-color: #5FA8D3;
 }
 
 #theme-switch{
@@ -159,13 +161,22 @@ h2 {
     font-weight: bold;
     text-decoration: none;
     font-family: 'Segoe UI', sans-serif;
+    transition: all 0.3s ease;
 }
 
-.subtopic-box:hover{
-    transform: scale(1.02);
-    transition: transform 0.3s ease;
+.subtopic-box:hover {
+  background-color: var(--hover-color);
+  box-shadow: var(--shadow-jitsu-color) 0px 10px 0px 0px,
+              0 6px 12px rgba(0, 0, 0, 0.2);
+  transform: translateY(-2px);
 }
 
+.subtopic-box:active {
+  background-color: var(--hover-color);
+  box-shadow: var(--shadow-jitsu-color) 0px 10px 0px 0px,
+              0 2px 4px rgba(0, 0, 0, 0.3);
+  transform: translateY(4px);
+}
 
 .overlay {
   height: 0;
