--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -339,7 +339,7 @@ footer {
     background-color: var(--footer-color);
     color: var(--footer-text-color);
     text-align: center;
-    padding: 8px;
+    padding: 20px;
     margin: 0px;
 }
 
@@ -460,6 +460,7 @@ content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 .content-area{
