--- a/main/html/employer-set-project/styles.css
+++ b/main/html/employer-set-project/styles.css
@@ -316,8 +316,9 @@ arrow-Nav a {
 }
 
 .overlay .closebtn {
-  position: absolute;
-  font-size: 40px;
+    position: absolute;
+    right: 48%;
+    font-size: 40px;
 }
 
 @media screen and (max-height: 450px) {
@@ -356,46 +357,6 @@ arrow-Nav a {
 
 .submenu a:hover {
   background-color: var(--sub-menu-hover);
-}
-
-.sidenav {
-  height: 75%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 100px;
-  left: 0;
-  background-color: var(--side-bar-color);
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 20px;
-  font-family: 'Segoe UI', sans-serif;
-  color: #fff;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  background-color: var(--sub-menu-hover);
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
 }
 
 span {
