--- a/main/html/styles.css
+++ b/main/html/styles.css
@@ -517,9 +517,8 @@ main{
 
 .overlay .closebtn {
   position: absolute;
-  top: 20px;
-  right: 45px;
-  font-size: 60px;
+  right: 49%;
+  font-size: 40px;
 }
 
 @media screen and (max-height: 450px) {
@@ -558,47 +557,6 @@ main{
 
 .submenu a:hover {
   background-color: var(--sub-menu-hover);
-}
-
-
-.sidenav {
-  height: 75%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 140px;
-  left: 0;
-  background-color: #1B4965;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
-}
-
-.sidenav a {
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 20px;
-  font-family: 'Segoe UI', sans-serif;
-  color: #fff;
-  display: block;
-  transition: 0.3s;
-}
-
-.sidenav a:hover {
-  background-color: #256185;
-}
-
-.sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
-}
-
-@media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
 }
 
 
